--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -1,3 +1,12 @@
+.container{
+  box-sizing: border-box; /* contar com os valores de padding */
+  max-width: 1200px;/* colocar header em um container */
+  padding-left: 20px;
+  padding-right: 20px; 
+  margin-left: auto;/* centralizar conforme aumenta de tela */
+  margin-right: auto;/* centralizar conforme aumenta de tela */
+}
+
 .botao{
   display: inline-block;
   padding: 16px 32px;
@@ -22,4 +31,23 @@
     padding: 12px 16px;
     font-size: 16px;
   }
+}
+
+.link{
+  display: inline-block;
+  color: var(--cor-p1);
+  font: 500 1.5rem/1.5 "poppins", sans-serif;
+  text-transform: uppercase; 
+}
+
+.link::after{
+  content: "";
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: currentColor;
+}
+
+.link:hover{
+  color: var(--cor-0);
 }
