--- a/css/bicicletas/bicicletas-lista.css
+++ b/css/bicicletas/bicicletas-lista.css
@@ -17,6 +17,10 @@
   overflow-x: auto; /* Criar um scroll na ul */
 }
 
+#bicicleta .bicicletas-lista ul{
+  padding: 0px 0px 20px 0px;
+}
+
 .bicicletas-lista li{
   min-width: 280px; 
 }
