--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -20,10 +20,41 @@
   font-family: "Poppins";
   font-weight: 600; */
   font: 600 1.125rem/1.35 "Poppins", sans-serif;
+  max-width: max-content;
+  border: none;
+  cursor: pointer;
 }
 
 .botao:hover{
   background: linear-gradient(#ffb60d, #e59317);
+}
+
+.botao.secundario{
+  background: var(--cor-10);
+  color: var(--cor-2);
+}
+
+.botao.seta{
+  display: flex;
+  align-items: center;
+}
+
+.botao.seta::after{
+  content: "";
+  display: inline-block;
+  width: 18px;
+  height: 10px;
+  margin-left: 12px;
+  background: url("../../img/icones/seta.svg");
+  transition: transform 0.2s;
+}
+
+.botao.seta:hover:after{
+  transform: translateX(4px);
+}
+
+.botao.secundario:hover{
+  background: var(--cor-9);
 }
 
 @media (max-width: 600px){
@@ -50,4 +81,31 @@
 
 .link:hover{
   color: var(--cor-0);
+}
+
+/* Título das páginas internas */
+.titulo-bg{
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: var(--cor-11);
+}
+
+.titulo{
+  background: url(../../img/dec/top-right.svg) no-repeat top right 20px;
+}
+
+.titulo p{
+  margin-bottom: 4px;
+}
+
+@media (max-width: 800px){
+  .titulo{
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+  .titulo p{
+    font-size: 1rem;
+    text-transform: lowercase;
+    font-weight: 400;
+  }
 }
