--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @import "./global/global.css";
 @import "./utilidades/tipografia.css";
 @import "./utilidades/cores.css";
+@import "./utilidades/animacao.css";
 
 
 @import "./global/header.css";
@@ -43,4 +44,4 @@
  
 
 /* termos */
-@import "./termos/termos.css"
+@import "./termos/termos.css";
